--- a/templates/jvm.config.j2
+++ b/templates/jvm.config.j2
@@ -4,9 +4,13 @@
 {% else %}
 {{presto_coordinator_max_heap_size}}
 {% endif %}
+-XX:ReservedCodeCacheSize=512M
+-XX:-UseBiasedLocking
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
+
+
